--- a/Kewords_Typing_Learner/Kewords_Typing_Learner/Kewords_Typing_Learner.csproj
+++ b/Kewords_Typing_Learner/Kewords_Typing_Learner/Kewords_Typing_Learner.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App.cs" />
+    <Compile Include="FileOperations.cs" />
+    <Compile Include="ConsoleOperation.cs" />
+    <Compile Include="General.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
